Header Pinned Message: Fix text cutting off (#3483)

--- a/src/components/middle/HeaderPinnedMessage.module.scss
+++ b/src/components/middle/HeaderPinnedMessage.module.scss
@@ -172,6 +172,7 @@
   overflow: hidden;
   text-overflow: ellipsis;
   margin: 0;
+  --custom-emoji-size: 1.125rem;
 
   :global(body.is-ios) & {
     font-size: 0.9375rem;
